# mandelbrot_v2

./: .gitignore  CMakeLists.txt  Makefile  main.py  mandelbrot.cpp  module.pyx
cpp/: gmp_complex.cpp  gmp_complex.h  image.cpp  image.h  main.cpp  main.h
cpp/tests/: test.cpp
